Pull #2287: Modernize codebase with Java improvements - Use modern Java collections API (toList() instead of collect(Collectors.toList()))