@@ -34,7 +34,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.maven.api.DependencyScope;
@@ -143,7 +142,7 @@ public class DefaultLifecycleRegistry implements LifecycleRegistry {
         List<String> allPhases = graph.visitAll();
         Collections.reverse(allPhases);
         List<String> computed =
-                allPhases.stream().filter(s -> !s.startsWith("$")).collect(Collectors.toList());
+                allPhases.stream().filter(s -> !s.startsWith("$")).toList();
         return computed;
     }
 
@@ -211,7 +210,7 @@ public class DefaultLifecycleRegistry implements LifecycleRegistry {
                                 && !Lifecycle.DEFAULT.equals(id)
                                 && !Lifecycle.SITE.equals(id))
                         .map(id -> wrap(all.get(id)))
-                        .collect(Collectors.toList());
+                        .toList();
             } catch (ComponentLookupException e) {
                 throw new LookupException(e);
             }
