@@ -26,7 +26,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.maven.api.xml.XmlNode;
 import org.apache.maven.execution.MavenSession;
@@ -102,7 +101,7 @@ public class MojoDescriptorCreator {
                                 : null,
                         null,
                         null))
-                .collect(Collectors.toList());
+                .toList();
         return XmlNode.newInstance("configuration", children);
     }
 
