@@ -20,7 +20,6 @@ package org.apache.maven.impl.model;
 
 import java.util.Iterator;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.apache.maven.api.model.Build;
 import org.apache.maven.api.model.BuildBase;
@@ -90,7 +89,7 @@ class FileToRawModelMerger extends MavenMerger {
         Iterator<Dependency> sourceIterator = source.getDependencies().iterator();
         builder.dependencies(target.getDependencies().stream()
                 .map(d -> mergeDependency(d, sourceIterator.next(), sourceDominant, context))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
@@ -133,7 +132,7 @@ class FileToRawModelMerger extends MavenMerger {
         Iterator<Profile> sourceIterator = source.getProfiles().iterator();
         builder.profiles(target.getProfiles().stream()
                 .map(d -> mergeProfile(d, sourceIterator.next(), sourceDominant, context))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
@@ -146,7 +145,7 @@ class FileToRawModelMerger extends MavenMerger {
         Iterator<Dependency> sourceIterator = source.getDependencies().iterator();
         builder.dependencies(target.getDependencies().stream()
                 .map(d -> mergeDependency(d, sourceIterator.next(), sourceDominant, context))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
@@ -175,7 +174,7 @@ class FileToRawModelMerger extends MavenMerger {
         Iterator<Dependency> sourceIterator = source.getDependencies().iterator();
         builder.dependencies(target.getDependencies().stream()
                 .map(d -> mergeDependency(d, sourceIterator.next(), sourceDominant, context))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @Override
